fix z-index

--- a/components/product-card/product-card.pcss
+++ b/components/product-card/product-card.pcss
@@ -618,7 +618,7 @@
 	font-size: 10px;
 	line-height: 12px;
 	color: var(--white);
-	z-index: 10;
+	z-index: 3;
 
 	position: absolute;
 	opacity: 0;
